# HamzaY-Youtube-BuNasiEgitim-AI

./: README.md  requirements.txt
Backend/: xMain.py
Backend/modules/ollama/: gemma3_4b.py  main.py  xGemma3_4b.py  xSTT.py  xTTS.py
Kumru/: kumru2B.py  kumru7B.py  pyproject.toml  webtool.py
OLLAMA/Backend/: xMain.py
OLLAMA/Backend/modules/ollama/: xGemma3_4b.py  xTTS.py
OLLAMA/test/: 1.py
TeachableMachine/: main.py
TeachableMachine/model/keras/: keras_model.h5  labels.txt
TeachableMachine/model/savedmodel/: labels.txt
TeachableMachine/model/savedmodel/model.savedmodel/variables/: variables.data-00000-of-00001  variables.index
llama-cpp-python/: requirements.txt  xMain.py
